--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,24 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# comando git laptop
-ComandosGitLaptop.txt
+# Node
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Build outputs
+dist/
+frontend/.next/
+backend/dist/
+
+# Logs
+*.log
+
+# IDEs
+.vscode/
+*.swp
+*.swo
+
+# Environments
+.env
+.env.local
